--- a/demo.ipynb
+++ b/demo.ipynb
@@ -17,7 +17,7 @@
     "import tensorflow as tf\n",
     "import util\n",
     "import numpy as np\n",
-    "from config import *\n",
+    "from resource.config import *\n",
     "from cnn import Cnn\n",
     "%matplotlib inline"
    ]
